# copyright-fixer

./: .pre-commit-hooks.yaml  CONTRIBUTING.md  README.md  pyproject.toml
src/: comment_formats.py  copyright_fixer.py  models.py  utils.py
src/core/: cli_parser.py  file_reader.py
